Bug 111738 - Duplicated numbering alignment option on numbering dialog in Impress
Summary: Duplicated numbering alignment option on numbering dialog in Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks:
 
Reported: 2017-08-12 17:41 UTC by Tamás Zolnai
Modified: 2017-11-11 19:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the alignment input fields (22.92 KB, image/png)
2017-08-12 17:42 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-12 17:41:24 UTC
Description:
Numering alignment (left, centered, right) can be set on two tab pages of the numbering dialog in Impress. One instace is on Positon tab page ("Numbering alignment"), the other one is on Customize tab page ("Alignment"). It useless to have both option setting the same property.
The second one on the Customize tab should be removed to make it consistent with Writer similar dialog. Also the alignment has an effect on the preview only on the position tab page, so better to set there.

Steps to Reproduce:
1. Open Impress
2. Click into title shape and open numbering dialog (context menu -> Bullets and numbering..."
3. Check Position and Customize tab pages. Changing alignment on one of them makes alignemt changes on the other tab too, which shows it's the same option.

Actual Results:  
Two tab pages has the same option to set.

Expected Results:
Only the position tab page should have the alignment input field.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Tamás Zolnai 2017-08-12 17:42:43 UTC
Created attachment 135496 [details]
Screenshot of the alignment input fields
Comment 2 Xisco Faulí 2017-08-15 17:47:20 UTC
I don't see the alignment option on the Customize tab.

Version: 6.0.0.0.alpha0+
Build ID: ef2e6260fad38e26c8591ea88ded348db618270d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Have you tested in master?
Comment 3 Tamás Zolnai 2017-08-15 18:07:57 UTC
I see, I was wrong in the reproducer steps. It appears conditionally, which might be some old stuff since alignment is always allowed (can be set on Position tab).
You can find it if you create a slide with content (outliner) presentation object and open the bullets and numbering dialog from that outliner shape.
Comment 4 Tamás Zolnai 2017-08-24 18:00:20 UTC
Let's turn this into a easy hack. The code is here:
cui/ui/numberingoptionspage.ui -> defines the view / look of the page
cui/source/tabpages/numpages.cxx -> defines the behavior
SvxNumOptionsTabPage::Reset() method seems a good starting point.
Comment 5 Commit Notification 2017-11-11 19:45:43 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b1f0d31c34464bdece4eea158097b3e4923cf5f

tdf#111738: Duplicated numbering alignment option on numbering dialog

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.