tdf#111738: Duplicated numbering alignment option on numbering dialog

Change-Id: Ifb18d5da84cc47da59448549f3c617e8040c246c
Reviewed-on: https://gerrit.libreoffice.org/44636
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>